tests/conformance/invalid/path-escape/.aigx/architecture.aigx
<aigx-architecture>
  <rule id="ARCH-no-deep-imports">Import features only through their public barrel; deep imports are forbidden.</rule>
</aigx-architecture>
